# numerical-methods-VSU-2022

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_generate.bat  deployqt.bat  geometry.txt  make.bat
TriangleDrawer/: TriangleDrawer.pro  cuthillmckeeutils.cpp  cuthillmckeeutils.h  loader.cpp  loader.h  mainwindow.cpp  mainwindow.h  stiffnessutils.cpp  stiffnessutils.h  triangulationutils.cpp  triangulationutils.h  viewport.cpp  viewport.h
TriangleDrawer/loader/: loader.cpp  loader.h  loaderthread.h
examples/: elka.txt  geometry.txt  man.txt  penis.txt  sphere.txt  triangle.txt
src/: cuthillmckeeutils.cpp  main.cpp  mainwindow.cpp  stiffnessutils.cpp  stiffnessutils.h  triangulationutils.cpp  viewport.cpp
src/common/: figure.h  material.h  materialinfo.h  point.h  pointinfo.h
src/loader/: loader.cpp  loader.h  loaderthread.cpp
src/ui/: mainwindow.cpp  mainwindow.h  materialeditor.cpp  materialeditor.h  pointeditor.cpp  pointeditor.h  viewport.cpp  viewport.h  viewporteditor.cpp  viewporteditor.h
